@@ -6,6 +6,9 @@ Version 1.2.2
 
 Note that this version has not been released yet.
 
+* Reset rewrite counter on new request, avoiding unnecessary request
+  failures due to bogus rewrite limit reports
+
 Version 1.2.1
 -------------
 
